@@ -321,31 +321,6 @@
                   <td bgcolor="#a0ddf0" colspan="" rowspan="" 
       valign="top" align="left">
     <font color="#000000" size="-1" face="arial,helvetica,sanserif">
-          Base compiler command line switches on the selected
-            compiler, not the current JDK
-        </font>
-  </td>
-                      <td bgcolor="#a0ddf0" colspan="" rowspan="" 
-      valign="top" align="left">
-    <font color="#000000" size="-1" face="arial,helvetica,sanserif">
-          If you set compiler to javac1.1, massage your
-            classpath correctly and set include*runtime to false you
-            can invoke jdk 1.1's javac even though you are running on
-            a 1.3 VM.  Current Ant will use -sourcepath which the
-            compiler cannot understand in this sitation.
-        </font>
-  </td>
-                      <td bgcolor="#a0ddf0" colspan="" rowspan="" 
-      valign="top" align="left">
-    <font color="#000000" size="-1" face="arial,helvetica,sanserif">
-          Stefan, others welcome
-        </font>
-  </td>
-      </tr>
-                  <tr>
-                  <td bgcolor="#a0ddf0" colspan="" rowspan="" 
-      valign="top" align="left">
-    <font color="#000000" size="-1" face="arial,helvetica,sanserif">
           Make javadoc a real directory based task
         </font>
   </td>
@@ -489,6 +464,27 @@
     <font color="#000000" size="-1" face="arial,helvetica,sanserif">
           showoutput attribute has been added - doesn't work in
               some cases yet (same reason as bug PR 7980)
+        </font>
+  </td>
+                      <td bgcolor="#a0ddf0" colspan="" rowspan="" 
+      valign="top" align="left">
+    <font color="#000000" size="-1" face="arial,helvetica,sanserif">
+          Stefan
+        </font>
+  </td>
+      </tr>
+                  <tr>
+                  <td bgcolor="#a0ddf0" colspan="" rowspan="" 
+      valign="top" align="left">
+    <font color="#000000" size="-1" face="arial,helvetica,sanserif">
+          Base compiler command line switches on the selected
+            compiler, not the current JDK
+        </font>
+  </td>
+                      <td bgcolor="#a0ddf0" colspan="" rowspan="" 
+      valign="top" align="left">
+    <font color="#000000" size="-1" face="arial,helvetica,sanserif">
+          &nbsp;
         </font>
   </td>
                       <td bgcolor="#a0ddf0" colspan="" rowspan="" 
